--- a/src/App.css
+++ b/src/App.css
@@ -36,9 +36,10 @@
     transform: rotate(360deg);
   }
 }
-.row {
-  margin-right: 0px !important;
-  margin-left: 0px !important;
+.row{
+    margin-right:0px !important;
+    margin-left: 0px !important;
+    display: inline-flex !important;
 }
 
 
