--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,12 @@
   }
 }
 
+
+@font-face {
+  font-family: 'FiraSans';
+  src: local('FiraSans'), url(./fonts/FiraSans-Regular.ttf) format('truetype');
+}
+
 /* .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -48,22 +54,16 @@
   height:200px !important;
 }
 
-.table-cont{
-  /**make table can scroll**/
-  max-height: 200px;
-  overflow: auto;
-  /** add some style**/
-  /*padding: 2px;*/
-}
 thead{
   background-color: #ddd;
 }
 
 
 body {
-  font-family: sans-serif;
+  font-family:FiraSans;
   font-size: 14px;
   padding: 0;
+  
 }
 
 a {
@@ -219,7 +219,120 @@ body{
 }
 
 .row-count{
-  padding : 25px;
-  box-shadow: 5px 10px #888888;
+  padding : 25px !important;
+}
 
+
+.card-counter{
+  box-shadow: 2px 2px 10px #DADADA;
+  margin: 5px;
+  padding: 20px 10px;
+  background-color: #fff;
+  height: 100px;
+  border-radius: 5px;
+  transition: .3s linear all;
+}
+
+.card-counter:hover{
+  box-shadow: 4px 4px 20px #DADADA;
+  transition: .3s linear all;
+}
+
+.card-counter.primary{
+  background-color: #007bff;
+  color: #FFF;
+}
+
+.card-counter.danger{
+  background-color: #ef5350;
+  color: #FFF;
+}  
+
+.card-counter.success{
+  background-color: #66bb6a;
+  color: #FFF;
+}  
+
+.card-counter.info{
+  background-color: #26c6da;
+  color: #FFF;
+}  
+
+.card-counter i{
+  font-size: 5em;
+  opacity: 0.2;
+}
+
+.card-counter .count-numbers{
+  position: absolute;
+  right: 35px;
+  top: 20px;
+  font-size: 32px;
+  display: block;
+}
+
+.card-counter .count-name{
+  position: absolute;
+  right: 35px;
+  top: 65px;
+  font-style: italic;
+  text-transform: capitalize;
+  opacity: 0.5;
+  display: block;
+  font-size: 18px;
+}
+
+.table td, .table th{
+  line-height: 0.9 !important;
+}
+
+
+/*new table*/
+
+
+.table-striped thead {
+  width: 100%;
+
+}
+.table-cont{
+  margin-top: 24px;
+}
+.table-striped tbody {
+  height: 230px;
+  overflow-y: auto;
+  width: 100%;
+}
+.table-striped tbody ,.table-striped thead{
+   display: block; 
+}
+.table-striped tbody td, .table-striped thead > tr> th {
+  /* float: left; */
+  border-bottom-width: 0;
+}
+.table td, .table th {
+  width: 14%;
+}
+
+.list-group {
+  overflow-y: scroll;
+  height: 900px;
+}
+.media-heading{
+  font-size: 17px;
+    text-align: left;
+    margin-left: 15px;
+    font-weight: 600;
+}
+
+.tweets_heading{
+  margin: 0px 13px;
+    text-align: left;
+    font-size: 13px;
+    color: grey;
+}
+.fa-twitter{
+  color : #55acee;
+}
+.color_g {
+  color:#66bb6a;
 }
