--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,7 @@
 .row{
     margin-right:0px !important;
     margin-left: 0px !important;
-    display: inline-flex !important;
+    /*display: inline-flex !important;*/
 }
 
 
