Mobile Issue resolved

--- a/src/App.css
+++ b/src/App.css
@@ -211,9 +211,9 @@ body{
   border: 1px solid transparent;
 }
 
-.row-count{
-  padding : 25px !important;
-}
+/*.row-count{*/
+  /*padding : 25px !important;*/
+/*}*/
 
 
 .card-counter{
