--- a/src/App.css
+++ b/src/App.css
@@ -364,3 +364,26 @@ body{
 .table tbody tr:nth-of-type(odd) {
     background-color: rgba(0,0,0,.05);
 }
+#button {
+    display: inline-block;
+    background-color: #000000;
+    width: 50px;
+    height: 50px;
+    text-align: center;
+    border-radius: 4px;
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    transition: background-color .3s,
+    opacity .5s, visibility .5s;
+    z-index: 1000;
+}
+#button::after {
+    content: "\f077";
+    font-family: FontAwesome;
+    font-weight: normal;
+    font-style: normal;
+    font-size: 2em;
+    line-height: 50px;
+    color: #fff;
+}
