--- a/src/App.css
+++ b/src/App.css
@@ -387,3 +387,67 @@ body{
     line-height: 50px;
     color: #fff;
 }
+
+
+/* corosul css */
+
+.carousel-item .col-md-4 h4{
+  font-size: 15px;
+  font-weight: 600;
+  /* width: 219px; */
+  /* white-space: nowrap;
+  overflow: hidden; */
+  text-overflow: ellipsis;
+  overflow: hidden; 
+  white-space: normal; 
+    
+  /* Exactly 2 lines are displayed.  
+      Height of 1 line is 1.2em*/ 
+  height: 3.4em;  
+  text-overflow: -o-ellipsis-lastline; 
+}
+
+.carousel-item .col-md-4 .mb-2{
+  height :400px;
+}
+
+.carousel-item .col-md-3 a{
+  height :341px;
+  font-size: 12px;
+  padding :20px;
+}
+
+@media only screen and (min-width: 767px) {
+
+
+.carousel-item .col-md-4 .img-fluid{
+  height:162px;
+}
+
+}
+
+.carousel-item .col-md-3 .card-body{
+  padding: 1.25rem 1rem;
+}
+
+.carousel-item .col-md-3 .card{
+  padding: 0px;
+}
+.controls-top{
+  display: none;
+}
+
+.controls-top-button .btn-floating{
+  padding: 0px 10px 10px 10px;
+    /* background-color:red; */
+}
+
+.carousel-indicators{
+  display: none !important;
+}
+
+
+
+
+
+
