--- a/src/App.css
+++ b/src/App.css
@@ -477,3 +477,33 @@ font-size: 10px;
 .navbar .navbar-collapse {
     text-align: center;
 }
+
+.btn-primary {
+    background-color: #F44336 !important;
+
+    background-repeat: repeat-x;
+
+    background-image: -o-linear-gradient(top, #f4433b, #f4433b);
+
+    background-image: linear-gradient(#f4433b, #f4433b);
+
+    border-color: #F44336 !important;
+
+    color: #fff !important;
+    font-weight: bold !important;
+
+    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.62);
+
+}
+
+.btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open .dropdown-toggle.btn-primary {
+
+    background-color: #F44336 !important;
+
+    border-color:#f4433b !important;
+    background-image: linear-gradient(#f4433b, #f4433b);
+    color: #fff !important;
+    font-weight: bold !important;
+    text-shadow: #f4433b;
+
+}
