--- a/src/App.css
+++ b/src/App.css
@@ -347,6 +347,9 @@ body{
     .carousel-item .col-md-4 .mb-2{
       height :370px !important;
     }
+    .custom {
+        margin-top: 10px;
+    }
 
 
 }
@@ -510,3 +513,5 @@ font-size: 10px;
 .custom{
     font-size: 1rem;
 }
+
+
