--- a/src/App.css
+++ b/src/App.css
@@ -541,3 +541,15 @@ font-size: 10px;
     margin-left: -10px;
     display: flex;
 }
+
+.col-md-8 .my-5 {
+  margin-top: 1rem!important
+}
+
+.col-md-8 .mb-3{
+  font-size: 1rem !important;
+
+}
+.col-md-8 .dark-grey-text {
+  font-size: 0.8rem !important;
+}
