--- a/src/App.css
+++ b/src/App.css
@@ -113,8 +113,8 @@ p {
   color: #888;
 }
 .card .card-body .card-text {
-  font-size: 0.8rem !important;
-  font-weight: 400;
+  font-size: 0.9rem !important;
+  font-weight: 1100;
   color: #747373;
 }
 
@@ -558,4 +558,9 @@ font-size: 10px;
     height: auto;
     padding-top: 5px;
     padding-bottom: 5px;
+}
+.custom-font-crausal {
+  font-size: 16px;
+  font-family: FiraSans;
+
 }
