--- a/src/App.css
+++ b/src/App.css
@@ -564,3 +564,14 @@ font-size: 10px;
   font-family: FiraSans;
 
 }
+.text-decoration-anchor {
+    color: black;
+    text-decoration: none !important;
+    background-color: transparent;
+}
+
+.text-decoration-anchor:hover{
+    color: black;
+    text-decoration: none !important;
+    background-color: transparent;
+}
