--- a/src/App.css
+++ b/src/App.css
@@ -578,3 +578,8 @@ font-size: 10px;
 .me{
 margin-top:129px !important;
 }
+img {
+    vertical-align: middle;
+    border-style: none;
+    max-width: -webkit-fill-available !important;
+}
